src-errormsg/E16-WrongVariable/Plutarch.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E16-WrongVariable/Plutarch.hs:37:59: error: [GHC-88464]
    Variable not in scope: amount :: Term s (PAsData PInteger)
    Suggested fix: Perhaps use data constructor ‘PAmount’ (line 24)
   |
37 |     PDeduct n from -> (self # pfromData from) - pfromData amount
   |                                                           ^^^^^^
